feat:将周课程表视图移植为Fragment fix:页面切换时底部Tab不刷新的bug refactor:删除周课表示例Activity

--- a/app/src/main/res/layout/header_base_func.xml
+++ b/app/src/main/res/layout/header_base_func.xml
@@ -5,7 +5,7 @@
     android:background="@color/app_white">
 
     <LinearLayout
-        android:id="@+id/id_layout"
+        android:id="@+id/id_class_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
