--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#03A9F4</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="tab_checked">#ED6A2C</color>
+    <color name="tab_checked">#03A9F4</color>
     <color name="tab_unchecked">#757575</color>
 
 </resources>
