--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
             android:layout_marginBottom="4dp"
             android:hint="请输入学号"
             android:inputType="text"
+            android:textSize="20dp"
             android:maxLines="1" />
 
     </RelativeLayout>
@@ -73,6 +74,7 @@
             android:hint="请输入教务系统密码"
             android:layout_marginStart="56dp"
             android:layout_marginEnd="28dp"
+            android:textSize="20dp"
             android:maxLines="1"/>
 
         <ImageView
@@ -150,6 +152,7 @@
         <Button
             android:id="@+id/login"
             android:text="登录"
+            android:textSize="25dp"
             android:textColor="@android:color/white"
             android:background="@color/colorPrimary"
             android:layout_marginTop="32dp"
