--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -28,6 +28,7 @@
             />
 
         <LinearLayout
+            android:id="@+id/afterLogin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -83,6 +84,18 @@
             </LinearLayout>
 
         </LinearLayout>
+
+            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
+                android:id="@+id/before_login"
+                app:rb_backgroundColor="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="点击登录"
+                android:textSize="30dp"
+                android:layout_margin="5dp"
+
+                />
 
     </LinearLayout>
 
