--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimary">#2ABFFD</color>
+    <color name="colorPrimaryDark">#2ABFFD</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="tab_checked">#03A9F4</color>
+    <color name="tab_checked">#2ABFFD</color>
     <color name="tab_unchecked">#757575</color>
 
 </resources>
