修改了cardView布局 写好了adapter以及DetailActivity 存在问题：详细信息加载不出来

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,6 +8,7 @@
     tools:context=".DetailActivity" >
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/class_detail_recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
